feat: adds 2 more airports

--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
                         const airports = [
                             { name: "Navi Mumbai Int'l Airport", lat: 18.9952, lng: 73.065 }, // Navi Mumbai
                             { name: "Chhatrapati Shivaji Maharaj Int'l Airport", lat: 19.0887, lng: 72.8656 }, // Mumbai
-                            { name: "Indira Gandhi Int'l International Airport", lat: 28.557162, lng: 77.102658 } // Delhi
+                            { name: "Indira Gandhi Int'l Airport", lat: 28.557162, lng: 77.102658 }, // Delhi
+                            { name: "Goa Dabolim Int'l Airport", lat: 15.382292, lng: 73.833004 }, // Goa 
+                            { name: "Manohar Int'l Airport", lat: 15.739258, lng: 73.869032 } // Goa 
                         ];
 
                         // Mark the airports and their zones
