--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>DGCA Airport Zones</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <script
-        src='https://apis.mappls.com/advancedmaps/api/5e98d1f926bbc5cc784fe133192db144/map_sdk?layer=vector&v=3.0&libraries=geoanalytics&callback=initmap'
+        src='https://apis.mappls.com/advancedmaps/api/GitHub/map_sdk?layer=vector&v=3.0&libraries=geoanalytics&callback=initmap'
         defer async></script>
     <style>
         #map {
@@ -28,8 +28,9 @@
 
             // Check if Geolocation is supported
             if (navigator.geolocation) {
-                navigator.geolocation.getCurrentPosition(
+                navigator.geolocation.watchPosition(
                     position => {
+                        
                         const userLat = position.coords.latitude;
                         const userLng = position.coords.longitude;
 
@@ -40,14 +41,17 @@
                             location: true,
                         });
 
-
                         // Hardcoded airport coordinates
                         const airports = [
                             { name: "Navi Mumbai Int'l Airport", lat: 18.9952, lng: 73.065 }, // Navi Mumbai
                             { name: "Chhatrapati Shivaji Maharaj Int'l Airport", lat: 19.0887, lng: 72.8656 }, // Mumbai
                             { name: "Indira Gandhi Int'l Airport", lat: 28.557162, lng: 77.102658 }, // Delhi
-                            { name: "Goa Dabolim Int'l Airport", lat: 15.382292, lng: 73.833004 }, // Goa 
-                            { name: "Manohar Int'l Airport", lat: 15.739258, lng: 73.869032 } // Goa 
+                            { name: "Goa Dabolim Int'l Airport", lat: 15.382292, lng: 73.833004 }, // Goa Dabolim
+                            { name: "Manohar Int'l Airport", lat: 15.739258, lng: 73.869032 }, // Goa 
+                            { name: "Kannur Int'l Airport", lat: 11.92, lng: 75.55 }, // Kerala
+                            { name: "Cochin Int'l Airport", lat: 10.153333, lng: 76.388164 }, // Kerala
+                            { name: "Kozhikode Int'l Airport", lat: 11.136111, lng: 75.955 }, // Kerala
+                            { name: "Thiruvananthapuram Int'l Airport", lat: 8.48, lng: 76.92 }, // Kerala
                         ];
 
                         // Mark the airports and their zones
@@ -85,7 +89,7 @@
                 fillColor: 'rgba(255, 0, 0, 0.5)', // Semi-transparent red
                 strokeColor: '#FF0000',
                 strokeWeight: 4,
-            });
+            });               
 
             // Marks a 12 km radius (Yellow Zone)
             new mappls.Circle({
@@ -96,7 +100,6 @@
                 strokeColor: '#FFFF00',
                 strokeWeight: 3,
             });
-
         }
 
         function markUserZone(map, lat, lng) {
